scenarios/scenario-13/S03-API_Gateway_In_Istio_As_A_Service/wso2-gateway.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wso2-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "api.wso2.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wso2-gateway-vs
  namespace: default
spec:
  hosts:
  - "api.wso2.com"
  gateways:
  - wso2-gateway
  http:
   - route:
     - destination:
        host: wso2-mg
        port:
          number: 9090
